Added custom typography

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,7 @@
 <button mat-raised-button color="primary">TEST-4</button>
 <button mat-raised-button color="accent">TEST-5</button>
 <button mat-raised-button color="warn">TEST-6</button>
+
+<h1 class="tc-heading">This is a test H1 header</h1>
+
+<p>This is a test paragraph.</p>
